Rewrite most passes to new node interface (enabling super-resolution rendering, proper aspect ratio handling, and faster batch processing)

--- a/vss-desktop/Cargo.toml
+++ b/vss-desktop/Cargo.toml
@@ -8,6 +8,7 @@ license = "Apache-2.0"
 [dependencies]
 vss = { path = "../vss" }
 clap = "2"
+itertools = "0.9"
 serde_json = "*"
 av = { git = "https://github.com/unpatched/rust-av.git", branch = "master", optional = true }
 
