--- a/vss-desktop/Cargo.toml
+++ b/vss-desktop/Cargo.toml
@@ -4,11 +4,18 @@ edition = "2018"
 version = "1.0.0"
 authors = ["The Visual System Simulator Developers"]
 license = "Apache-2.0"
+default-run = "vss"
+
+[[bin]]
+name = "vss"
+path = "src/main.rs"
 
 [dependencies]
 vss = { path = "../vss" }
 clap = "2"
-itertools = "0.9"
+serde = { version = "1", features = ["derive"] }
+glob = "0.3"
+mustache = "0.9"
 serde_json = "*"
 av = { git = "https://github.com/unpatched/rust-av.git", branch = "master", optional = true }
 
