Refactor blur to common.glsl, start rework of depth-buffers.

--- a/vss/Cargo.toml
+++ b/vss/Cargo.toml
@@ -13,6 +13,7 @@ gfx_window_glutin = "0.31"
 gfx = "0.18"
 gfx_gl = "0.6"
 glutin = "0.21"
+glsl-include = "0.3.1"
 ws = "0.9"
 image = "0.23"
 cgmath = "0.17.0"
