--- a/vss-desktop/Cargo.toml
+++ b/vss-desktop/Cargo.toml
@@ -19,6 +19,7 @@ glob = "0.3"
 mustache = "0.9"
 serde_json = "*"
 ac_ffmpeg = { package = "ac-ffmpeg", version = "0.15.3", optional = true }
+cgmath = "0.17"
 
 [build-dependencies]
 cc = "^1.0.61"
