Added Varjo logging and greatly improved performance when using Varjo matrices

--- a/vss-desktop/Cargo.toml
+++ b/vss-desktop/Cargo.toml
@@ -19,6 +19,8 @@ glob = "0.3"
 mustache = "0.9"
 serde_json = "*"
 ac_ffmpeg = { package = "ac-ffmpeg", version = "0.15.3", optional = true }
+log = "0.4.11"
+simple-logging = "2.0.2"
 cgmath = "0.17"
 
 [build-dependencies]
