--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ members = [
   "vss-desktop",
   #"vss-mobile"
 ]
+
+
+[patch.crates-io]
+#gfx_core = {path = "dependencies/gfx_core", version = "0.9"}
+gfx_core =  { git = 'https://github.com/trimoq/gfx', branch = 'v0.18', version = "0.9"}
