More work on stereo support and added cubemaps for retina (only tested with varjo api)

--- a/vss-desktop/Cargo.toml
+++ b/vss-desktop/Cargo.toml
@@ -21,12 +21,12 @@ serde_json = "*"
 ac_ffmpeg = { package = "ac-ffmpeg", version = "0.15.3", optional = true }
 log = "0.4.11"
 simple-logging = "2.0.2"
-cgmath = "0.17"
+cgmath = "0.18"
 
 [build-dependencies]
 cc = "^1.0.61"
 
 [features]
-default = []
+default = ["varjo"]
 video = ["ac_ffmpeg"]
 varjo = []
