--- a/vss/Cargo.toml
+++ b/vss/Cargo.toml
@@ -7,6 +7,7 @@ license = "Apache-2.0"
 
 [dependencies]
 serde_json = "1"
+eframe = "0.13.0"
 gfx_core = "0.9"
 gfx_device_gl = "0.16"
 gfx_window_glutin = "0.31"
