--- a/vss/Cargo.toml
+++ b/vss/Cargo.toml
@@ -1,20 +1,20 @@
 [package]
 name = "vss"
-edition = "2018"
 version = "1.0.0"
+edition = "2021"
 authors = ["The Visual System Simulator Developers"]
 license = "Apache-2.0"
+resolver = "2"
 
 [dependencies]
 serde_json = "1"
 eframe = "0.13.0"
-gfx_core = "0.9"
-gfx_device_gl = "0.16"
-gfx_window_glutin = "0.31"
-gfx = "0.18"
-gfx_gl = "0.6"
-glutin = "0.21"
-glsl-include = "0.3"
+winit = "0.26"
+env_logger = "0.9"
+log = "0.4"
+wgpu = "0.13"
+#glutin = "0.21"
+#glsl-include = "0.3"
 ws = "0.9"
 image = "0.23"
 cgmath = "0.18"
