--- a/vss-desktop/Cargo.toml
+++ b/vss-desktop/Cargo.toml
@@ -22,6 +22,8 @@ ac_ffmpeg = { package = "ac-ffmpeg", version = "0.15.3", optional = true }
 log = "0.4.11"
 simple-logging = "2.0.2"
 cgmath = "0.18"
+wgpu = "0.14.2"
+pollster = "0.2"
 
 [build-dependencies]
 cc = "^1.0.61"
