--- a/vss-mobile/android/build.gradle
+++ b/vss-mobile/android/build.gradle
@@ -3,35 +3,46 @@ apply plugin: 'com.android.application'
 buildscript {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.3.2'
+        classpath 'com.android.tools.build:gradle:7.4.1'
+        classpath 'org.mozilla.rust-android-gradle:plugin:0.9.3'
     }
 }
 
 allprojects {
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 }
 
+apply plugin: 'org.mozilla.rust-android-gradle.rust-android'
+
+cargo {
+    module = "../"
+    libname = "vss"
+    targets = ["arm", "arm64", "x86", "x86_64"]
+    targetDirectory = '../../target'
+}
+
 android {
-    compileSdkVersion 27
+    compileSdkVersion 33
+    ndkVersion "25.2.9519653"
     defaultConfig {
-        applicationId "de.uni_stuttgart.vss"
+        applicationId "com.vss"
         minSdkVersion 24
-        targetSdkVersion 27
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
     }
-    lintOptions {
-        abortOnError false
-    }
     compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
+        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_1_8
     }
     buildTypes {
         release {
@@ -40,15 +51,19 @@ android {
         }
     }
     dependencies {
-        implementation 'com.android.support:appcompat-v7:27.0.2'
-        implementation 'com.android.support:design:27.0.2'
-        implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-        implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
+        implementation 'androidx.core:core-ktx:1.7.0'
+        implementation 'androidx.appcompat:appcompat:1.4.1'
+        implementation 'com.google.android.material:material:1.5.0'
+        implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+        implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
+        implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
+        implementation 'androidx.annotation:annotation:1.1.0'
+        implementation 'androidx.slidingpanelayout:slidingpanelayout:1.2.0'
     }
-    preBuild.doFirst { 
-        //assert file("./src/main/jniLibs/arm64-v8a/vss.so").exists()
-        //assert file("./src/main/jniLibs/armeabi-v7a/vss.so").exists() 
-        //assert file("./src/main/jniLibs/x86/vss.so").exists() 
-        //assert file("./src/main/jniLibs/x86_64/vss.so").exists() 
+    namespace 'com.vss'
+    tasks.whenTaskAdded { task ->
+        if ((task.name == 'javaPreCompileDebug' || task.name == 'javaPreCompileRelease')) {
+            task.dependsOn 'cargoBuild'
+        }
     }
 }
