--- a/vss-mobile/android/src/main/AndroidManifest.xml
+++ b/vss-mobile/android/src/main/AndroidManifest.xml
@@ -1,40 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.uni_stuttgart.vss">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-feature android:name="android.hardware.camera" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".activities.CoreLoaderActivity"
-            android:noHistory="true" />
 
         <activity
-            android:name=".activities.CoreActivity"
-            android:noHistory="true"
-            android:screenOrientation="portrait"
-            android:configChanges="keyboardHidden|orientation|screenSize">
+            android:name=".activities.MainLoaderActivity"
+            android:exported="true"
+            android:noHistory="true">
 
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="core" />
-        </activity>
-
-        <activity
-            android:name=".activities.MainMenuActivity"
-            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
+        <activity
+            android:name=".activities.MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="@string/app_native_lib" />
+
+        </activity>
+
+        <activity
+            android:name=".activities.FullscreenActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:noHistory="true"
+            android:screenOrientation="portrait">
+
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="@string/app_native_lib" />
+
+        </activity>
+
     </application>
 
 </manifest>
