--- a/vss-mobile/android/src/main/AndroidManifest.xml
+++ b/vss-mobile/android/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".activities.MainLoaderActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:noHistory="true">
 
@@ -23,10 +23,6 @@
             </intent-filter>
 
         </activity>
-
-        <activity
-            android:name=".activities.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
 
     </application>
 
