--- a/vss-mobile/Cargo.toml
+++ b/vss-mobile/Cargo.toml
@@ -13,6 +13,7 @@ crate-type = ["cdylib"]
 vss = { path = "../vss" }
 lazy_static = "1.4.0"
 log = "0.4"
+futures = "0.3"
 
 [target.'cfg(target_os="android")'.dependencies]
 jni = "0.21"
