wgpu varjo support (unfinished)

--- a/vss-desktop/Cargo.toml
+++ b/vss-desktop/Cargo.toml
@@ -23,6 +23,8 @@ log = "0.4.11"
 simple-logging = "2.0.2"
 cgmath = "0.18"
 wgpu = "0.15.1"
+wgpu-hal = "0.15.3"
+ash = "0.37.2"
 pollster = "0.2"
 
 [build-dependencies]
