--- a/vss-mobile/Cargo.toml
+++ b/vss-mobile/Cargo.toml
@@ -14,6 +14,7 @@ vss = { path = "../vss" }
 lazy_static = "1.4.0"
 log = "0.4"
 futures = "0.3"
+wgpu = "0.15.1"
 raw-window-handle = "0.5.0"
 
 [target.'cfg(target_os="android")'.dependencies]
