--- a/vss-mobile/Cargo.toml
+++ b/vss-mobile/Cargo.toml
@@ -20,7 +20,7 @@ raw-window-handle = "0.5.0"
 [target.'cfg(target_os="android")'.dependencies]
 jni = "0.21"
 ndk = "0.7"
-ndk-sys = "0.4.1+23.1.7779620"
+ndk-sys = "0.4.1"
 android_logger = "0.13.1"
 
 [package.metadata.android.sdk]
