fix gui visibility, changeable ui elements

--- a/vss-desktop/Cargo.toml
+++ b/vss-desktop/Cargo.toml
@@ -26,6 +26,7 @@ wgpu = "0.15.1"
 wgpu-hal = { version = "0.15.3", optional = true }
 ash = { version = "0.37.2", optional = true }
 pollster = "0.2"
+egui = "0.21.0"
 
 [build-dependencies]
 cc = "^1.0.61"
