--- a/vss/Cargo.toml
+++ b/vss/Cargo.toml
@@ -7,7 +7,7 @@ license = "Apache-2.0"
 resolver = "2"
 
 [dependencies]
-eframe = "0.21.3"
+egui = "0.21.0"
 egui-wgpu = "0.21.0"
 winit = "0.27.5"
 wgpu = "0.15.1"
