Implement To/FromJsonInspectors. Fix Android build.

--- a/vss/Cargo.toml
+++ b/vss/Cargo.toml
@@ -9,10 +9,12 @@ resolver = "2"
 [dependencies]
 egui = "0.21.0"
 egui-wgpu = "0.21.0"
-winit = "0.28.3"
+winit = "0.27.5"
 wgpu = "0.15.1"
 image = "0.24"
 cgmath = "0.18"
 bitflags = "2.2.1"
 futures-intrusive = "0.5.0"
 raw-window-handle = "0.5.0"
+serde_json = "*"
+serde = "1"
