--- a/vss-desktop/Cargo.toml
+++ b/vss-desktop/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/main.rs"
 
 [dependencies]
 vss = { path = "../vss" }
+vss-winit = { path = "../vss-winit" }
 clap = "4"
 serde = { version = "1", features = ["derive"] }
 glob = "0.3"
