--- a/vss-winit/Cargo.toml
+++ b/vss-winit/Cargo.toml
@@ -7,6 +7,6 @@ license = "Apache-2.0"
 resolver = "2"
 
 [dependencies]
+cgmath = { workspace = true }
 vss = { path = "../vss" }
 winit = "0.28"
-cgmath = "0.18"
