--- a/vss-mobile/Cargo.toml
+++ b/vss-mobile/Cargo.toml
@@ -10,12 +10,12 @@ name = "vss"
 crate-type = ["cdylib"]
 
 [dependencies]
+wgpu = { workspace = true }
+raw-window-handle = { workspace = true }
 vss = { path = "../vss" }
 lazy_static = "1.4.0"
 log = "0.4"
 futures = "0.3"
-wgpu = "0.16"
-raw-window-handle = "0.5"
 
 [target.'cfg(target_os="android")'.dependencies]
 jni = "0.21"
