--- a/vss-web/Cargo.toml
+++ b/vss-web/Cargo.toml
@@ -10,5 +10,9 @@ crate-type = ["cdylib"]
 
 [dependencies]
 vss = { path = "../vss", features = ['webgl'] }
+vss-winit = { path = "../vss-winit" }
+console_error_panic_hook = "0.1.7"
+console_log = "1"
 wasm-bindgen = "0.2.87"
+wasm-bindgen-futures = "0.4.34"
 web-sys = { version = "0.3.64", features = ['console'] }
