Working on vss-web initialization

--- a/vss-winit/Cargo.toml
+++ b/vss-winit/Cargo.toml
@@ -9,4 +9,4 @@ resolver = "2"
 [dependencies]
 cgmath = { workspace = true }
 vss = { path = "../vss" }
-winit = "0.28"
+winit = { workspace = true }
