--- a/vss-web/Cargo.toml
+++ b/vss-web/Cargo.toml
@@ -16,3 +16,4 @@ console_log = "1"
 wasm-bindgen = "0.2.87"
 wasm-bindgen-futures = "0.4.34"
 web-sys = { version = "0.3.64", features = ['console'] }
+winit = { workspace = true }
