--- a/vss-web/Cargo.toml
+++ b/vss-web/Cargo.toml
@@ -17,3 +17,4 @@ wasm-bindgen = "0.2.87"
 wasm-bindgen-futures = "0.4.37"
 web-sys = { version = "0.3.64", features = ['console'] }
 winit = { workspace = true }
+wgpu = { workspace = true }
