--- a/vss-web/app/package.json
+++ b/vss-web/app/package.json
@@ -7,6 +7,7 @@
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "^1.7.0",
+    "copy-webpack-plugin": "^11.0.0",
     "html-webpack-plugin": "^5.5.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
